--- a/media/css/style.css
+++ b/media/css/style.css
@@ -192,7 +192,7 @@ hr {
 	margin-right: 20px;
 	font-weight: 700;
 	font-size: 1.2em;
-	font-family: JuliusSansOne;
+	font-family: 'JuliusSansOne-Regular';
 	color:#fff;
 }
 
@@ -236,13 +236,13 @@ hr {
 }
 
 .section-heading p{
-	font-family: Savoye LET;
+	font-family: 'Savoye LET';
 	font-size: 26px;
 	letter-spacing: 1.2px;
 }
 
 .row p{
-	font-family: Savoye LET;
+	font-family: 'Savoye LET';
 	font-size: 24px;
 	letter-spacing: 1.2px;
 }
@@ -348,7 +348,7 @@ hr {
 }
 
 .btn a{
-	font-family: Savoye LET;
+	font-family: 'Savoye LET';
 	font-size: 20px;
 }
 
