--- a/media/css/style.css
+++ b/media/css/style.css
@@ -19,7 +19,9 @@
 	src: url(../fonts/Savoye LET.ttc)
 	format("ttc"),
 	url(../fonts/Savoye LET.ttf)
-	format("truetype");
+	format("truetype"),
+	url(../fonts/Savoye LET.otf)
+	format("otf");
 }
 
 body {
