--- a/media/css/style.css
+++ b/media/css/style.css
@@ -16,10 +16,10 @@
 
 @font-face{
 	font-family: 'Savoye LET'
-	src: url(../fonts/Savoye LET.ttc)
-	format("ttc"),
-	url(../fonts/Savoye LET.ttf)
+	src: url(../fonts/Savoye LET.ttf)
 	format("truetype"),
+	url(../fonts/Savoye LET.ttc)
+	format("ttc"),
 	url(../fonts/Savoye LET.otf)
 	format("otf");
 }
