--- a/media/css/style.css
+++ b/media/css/style.css
@@ -15,7 +15,7 @@
 }
 
 @font-face{
-	font-family: 'Savoye LET'
+	font-family: 'Savoye LET';
 	src: url(../fonts/Savoye LET.ttf)
 	format("truetype"),
 	url(../fonts/Savoye LET.ttc)
