ubah font tanggal

--- a/media/css/Story.css
+++ b/media/css/Story.css
@@ -65,7 +65,7 @@
 	font-size: 20px;
 	font-weight: 400;
 	padding: 40px 20px;
-	font-family: zapfino;
+	font-family: 'Savoye-LET';
 }
 /*
  * 3.19 -> Funfact
