--- a/media/css/style.css
+++ b/media/css/style.css
@@ -127,7 +127,7 @@ hr {
 	position:relative;
 	overflow:hidden;
 	max-width: 100%;
-	max-height: 750px;
+	max-height: 650px;
 }
 
 #background_image img{
@@ -222,6 +222,7 @@ hr {
 	margin-top: 0%;
 	margin-bottom: 0%;
 	padding-top: 5%;
+	padding-left: 4%;
 	background-color:;
 	
 }
@@ -285,6 +286,7 @@ hr {
 	position:relative;
 	margin-top: 10%;
 	padding-top: 10%;
+	padding-left: 4%;
 	background-color:#fafafa;
 
 }
@@ -352,6 +354,7 @@ hr {
 	position:;
 	width: 100%;
 	padding-top: 10%;
+	padding-left: 4%;
 	margin-top: 0%;
 }
 
